--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 plugins {
     id 'java-library'
     id("io.freefair.lombok") version "6.6.3" apply false
+    id("com.diffplug.gradle.spotless") version "6.16.0" apply false
 }
 
 java {
@@ -21,10 +22,33 @@ targetCompatibility = JavaVersion.VERSION_11
 jar.enabled = false
 build.enabled = false
 
-allprojects {
+subprojects() {
+
+    apply plugin: 'java-library'
+    apply plugin: 'io.freefair.lombok'
+    apply plugin: 'com.diffplug.spotless'
+
+    spotless {
+        java {
+            googleJavaFormat('1.14.0')
+        }
+    }
+
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+
+    dependencies {
+        testImplementation(platform('org.junit:junit-bom:5.9.2'))
+        testImplementation('org.junit.jupiter:junit-jupiter')
+    }
+
+    test {
+        useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+        }
     }
 }
