--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    ext{
+        junitBomVersion = '5.9.2'
+        hamcrestVersion = '2.0.0.0'
+    }
 }
 
 plugins {
@@ -41,7 +45,7 @@ subprojects() {
     }
 
     dependencies {
-        testImplementation(platform('org.junit:junit-bom:5.9.2'))
+        testImplementation(platform("org.junit:junit-bom:$junitBomVersion"))
         testImplementation('org.junit.jupiter:junit-jupiter')
     }
 
