feat(engine): implement engine, pass tests

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ subprojects() {
     }
 
     dependencies {
+        implementation 'org.slf4j:slf4j-api:1.7.26'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
         testImplementation(platform("org.junit:junit-bom:$junitBomVersion"))
         testImplementation('org.junit.jupiter:junit-jupiter')
     }
@@ -52,6 +54,7 @@ subprojects() {
     test {
         useJUnitPlatform()
         testLogging {
+            showStandardStreams = true
             events "passed", "skipped", "failed"
         }
     }
