chore(doc): add build howto
Also cleanup dependency versions

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@ buildscript {
         mavenCentral()
     }
     ext{
-        junitBomVersion = '5.9.2'
         hamcrestVersion = '2.0.0.0'
+        junitBomVersion = '5.9.2'
+        logbackVersion = '1.2.3'
+        slf4jVersion = '1.7.26'
     }
 }
 
@@ -45,8 +47,8 @@ subprojects() {
     }
 
     dependencies {
-        implementation 'org.slf4j:slf4j-api:1.7.26'
-        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        implementation "org.slf4j:slf4j-api:$slf4jVersion"
+        implementation "ch.qos.logback:logback-classic:$logbackVersion"
         testImplementation(platform("org.junit:junit-bom:$junitBomVersion"))
         testImplementation('org.junit.jupiter:junit-jupiter')
     }
